correct order js

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </div>
 		<div id="messages"></div>
 	</div>
-	<script src="js/functions.js"></script>
-	<script src="js/script.js"></script>
+	<script src="functions.js"></script>
+	<script src="script.js"></script>
 </body>
 </html>
