--- a/index.html
+++ b/index.html
@@ -3,10 +3,17 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Kamień, papier, nożyce</title>
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header class="splash">
+        <h1 class="title">Zagraj z komputerem w<br> "kamień, papier, nożyce"</h1>
+    </header>
 	<div class="container">
+        <div class="description">
+            <p><span>Krótkie przypomnienie zasad:</span><br> nożyce są silniejsze od papieru, ponieważ go tną,<br>
+            kamień jest silniejszy od nożyc, ponieważ je tępi,<br>
+            papier jest silniejszy od kamienia, ponieważ go owija.</p></div>
 		<div id="buttons">
             <button id="button-rock">Kamień</button>
             <button id="button-paper">Papier</button>
